# monies

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  app.py  init_db.py  justfile  mypy.ini  oauth.env.example  prompts.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: README.md  deploy.yml  python-app.yml  test.yml
scripts/: cache_data.sh  cache_market_data.py  dev_container_setup.sh  format.sh  lint.sh  migrate_api_keys.py  migrate_oauth.py  migrate_oauth_scopes.py  monies.service  nginx-monies.conf  run.sh  server_setup.sh  setup.bat  setup.sh  test.sh
src/: __init__.py  app.py
src/api/: __init__.py  ai_analysis.py  ai_analysis.py.bak  exchanges.py  social_media.py
src/components/: navigation.py
src/models/: database.py
src/pages/: __init__.py  ai_insights.py  dashboard.py  portfolio_optimizer.py  settings.py  social_media.py  trade_invest.py  wallets.py
src/utils/: ai_helpers.py  api_config.py  api_tester.py  auth.py  data_aggregator.py  data_cache.py  db_init.py  oauth_config.py  portfolio_optimizer.py  security.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: test_data.py
tests/functional/: test_ai_insights.py  test_dashboard.py  test_oauth_flow.py  test_oauth_ui.py  test_settings.py  test_wallet_management.py
tests/integration/: test_ai_analysis.py  test_ai_analysis_new.py  test_exchange_api.py  test_oauth_integration.py  test_social_media.py
(+11 files in other folders)
